unpackaged/main/default/objects/Credit_Report_Info__c/Credit_Report_Info__c.object-meta.xml
<CustomObject>
    <description>https://nationalfunding.atlassian.net/wiki/spaces/NF/pages/2470281219/GetCreditReport</description>
    <label>Credit Report Info</label>
    <nameField>
        <displayFormat>CRI - {00000}</displayFormat>
        <label>Credit Report Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>