unpackaged/main/default/objects/Credit_Report_Info__c/fields/Credit_Review_Controller__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review Controller</label>
    <referenceTo>Credit_Review_Controller__c</referenceTo>
    <relationshipLabel>Credit Report Info</relationshipLabel>
    <relationshipName>Credit_Report_Info</relationshipName>
    <type>Lookup</type>
</CustomField>