unpackaged/main/default/objects/Credit_Report_Info__c/fields/Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Process_Step__c</fullName>
    <label>Process Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>